src/test/deca/context/invalid/assign_str_int.deca

// Description :
// Affectation d'une string à un int
//
// Resultats :
// Erreur contextuelle
// incompatibilité de type : int <- string
//

{
  int x;
  x = "a";
}